# minimum_cmake_test

./: CMakeLists.txt  README.md
src/: main.cpp
